added the frog, gossip stone and keaton grass sanity.

--- a/mystery.html
+++ b/mystery.html
@@ -31,7 +31,7 @@
       <div class="mystery-container">
         <div class="sanity-bundle-container1">
           <section id="scoop-sanity" class="scoop-sanity">
-            <h2>SCOOP</h2>
+            <button class="sanity-toggle-btn"><h1>SCOOP</h1></button>
             <div class="bottle-list">
               <img
                 class="item"
@@ -84,8 +84,8 @@
               <div class="box"></div>
             </div>
           </section>
-          <section id="cow-sanity" class="cow-sanity">
-            <h1>COWS</h1>
+          <section id="cow-sanity" class="cow-sanity toggleable-img-container">
+            <button class="sanity-toggle-btn"><h1>COWS</h1></button>
             <ul class="cow-container">
               <h2>Termina Field</h2>
               <div class="icon-container">
@@ -115,8 +115,8 @@
               </div>
             </ul>
           </section>
-          <section id="soil-sanity" class="soil-sanity">
-            <h1>SOIL</h1>
+          <section id="soil-sanity" class="soil-sanity toggleable-img-container">
+            <button class="sanity-toggle-btn"><h1>SOIL</h1></button>
             <ul class="soil-container">
               <h2>Termina Field</h2>
               <div class="icon-container">
@@ -423,8 +423,8 @@
            </div>
         </section>
         <div id="sanity-bundle-container2" class="sanity-bundle-container2">
-          <section id="hit-spot-sanity" class="hit-spot-sanity" >
-            <h1>HIT-SPOTS</h1>
+          <section id="hit-spot-sanity" class="hit-spot-sanity toggleable-img-container" >
+            <button class="sanity-toggle-btn"><h1>HIT-SPOTS</h1></button>
             <ul class="hit-spot-container">
               <h2>Termina Field</h2>
               <div class="icon-container">
@@ -476,7 +476,7 @@
             </ul>
           </section>
           <section id="cratesBarrels-sanity" class="cratesBarrels-sanity">
-            <h1>CRATES & BARRELS</h1>
+            <button class="sanity-toggle-btn"><h1>CRATES & BARRELS</h1></button>
             <ul class="cratesBarrels-container">
               <h2>Clock Town</h2>
               <div class="icon-container">
@@ -523,7 +523,7 @@
         </div>
         <div id="sanity-bundle-container3" class="sanity-bundle-container3">
           <section id="mundane-sanity"  class="mundane-sanity">
-            <h1>MUNDANE</h1>
+            <button class="sanity-toggle-btn"><h1>MUNDANE</h1></button>
             <ul class="mundane-container">
               <h2>Dampe</h2>
               <div class="icon-container">
@@ -573,7 +573,7 @@
             </ul>
           </section>
           <section id="snowball-sanity"  class="snowball-sanity">
-            <h1>SNOWBALLS</h1>
+            <button class="sanity-toggle-btn"><h1>SNOWBALLS</h1></button>
             <ul class="snowball-container">
               <h2>Path to Mountain</h2>
               <div class="icon-container">
@@ -685,7 +685,7 @@
               </div>
               <div class="red-rupee-container">
                 <ul>
-                  <h2>Swamp </h2>
+                  <h2>Swamp</h2>
                   <div class="icon-container">
                     <img src="imgs/icons/red-rupee.png" alt="Red Rupee">
                     <img src="imgs/icons/red-rupee.png" alt="Red Rupee">
@@ -872,6 +872,88 @@
                 </ul>
               </div>
            </div>
+          </div>
+        </section>
+        <section class="sanity-bundle-container4">
+          <div class="keaton-sanity">
+            <button class="sanity-toggle-btn"><h1>KEATON GRASS</h1></button>
+            <ul class="keaton-container">
+              <h2>Clock Town</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/keaton.png" alt="Keaton">
+                <img src="imgs/tracker-icons/masks/keaton.png" alt="Keaton">  
+                <img src="imgs/tracker-icons/masks/keaton.png" alt="Keaton">     
+              </div>
+            </ul>
+            <ul class="keaton-container">
+              <h2>Milk Road</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/keaton.png" alt="Keaton">
+                <img src="imgs/tracker-icons/masks/keaton.png" alt="Keaton">  
+                <img src="imgs/tracker-icons/masks/keaton.png" alt="Keaton">     
+              </div>
+            </ul>
+            <ul class="keaton-container">
+              <h2>Mountain Village</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/keaton.png" alt="Keaton">
+                <img src="imgs/tracker-icons/masks/keaton.png" alt="Keaton">  
+                <img src="imgs/tracker-icons/masks/keaton.png" alt="Keaton">     
+              </div>
+            </ul>
+          </div>
+          <div class="frog-sanity">
+            <button class="sanity-toggle-btn"><h1>FROGS</h1></button>
+              <div class="frog-container">
+                <img class="item" src="imgs/icons/frog-gray.png" alt="Gray Frog">
+                <input type="text">
+              </div>
+              <div class="frog-container">
+                <img class="item" src="imgs/icons/frog-aqua.png" alt="Aqua Frog">
+                <input type="text">
+              </div>
+              <div class="frog-container">
+                <img class="item" src="imgs/icons/frog-blue.png" alt="Blue Frog">
+                <input type="text">
+              </div>
+              <div class="frog-container">
+                <img class="item" src="imgs/icons/frog-orange.png" alt="Orange Frog">
+                <input type="text">
+              </div>
+          </div>
+          <div class="gossip-sanity">
+            <button class="sanity-toggle-btn"><h1>GOSSIP STONES</h1></button>
+            <ul class="gossip-container">
+              <h2>Swamp</h2>
+              <div class="icon-container">
+                <img src="imgs/icons/gossip-icons.png" alt="Gossip Stone">
+                <img src="imgs/icons/gossip-icons.png" alt="Gossip Stone">
+                <img src="imgs/icons/gossip-icons.png" alt="Gossip Stone">     
+              </div>
+            </ul>
+            <ul class="gossip-container">
+              <h2>Mountain</h2>
+              <div class="icon-container">
+                <img src="imgs/icons/gossip-icons.png" alt="Gossip Stone">
+                <img src="imgs/icons/gossip-icons.png" alt="Gossip Stone">
+                <img src="imgs/icons/gossip-icons.png" alt="Gossip Stone">  
+              </div>
+            </ul>
+            <ul class="gossip-container">
+              <h2>Great Bay</h2>
+              <div class="icon-container">
+                <img src="imgs/icons/gossip-icons.png" alt="Gossip Stone">
+                <img src="imgs/icons/gossip-icons.png" alt="Gossip Stone">  
+              </div>
+            </ul>
+            <ul class="gossip-container streched-container">
+              <h2>Ikana</h2>
+              <div class="icon-container">
+                <img src="imgs/icons/gossip-icons.png" alt="Gossip Stone">
+                <img src="imgs/icons/gossip-icons.png" alt="Gossip Stone">
+                <img src="imgs/icons/gossip-icons.png" alt="Gossip Stone">    
+              </div>
+            </ul>
           </div>
         </section>
         <section id="fairy-sanity" class="fairy-sanity">
@@ -1336,6 +1418,7 @@
     </main>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/tippy.js@6"></script>
+    <script src="tiptool.js"></script>
     <script src = "tracker.js"></script></script>
   </body>
 </html>
